# technical-machine

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  Makefile  Makefile.am  SConstruct  ability.cpp  ability.h  account.txt.template  active.h  ai.cpp  ai.h  ai.sbt  analyze_all_logs.py  analyze_logs.cpp  analyze_logs.h  analyze_logs_gui.cpp  analyze_logs_main.cpp  battle.cpp  battle.h  block.cpp  block.h  configure  configure.ac  damage.cpp  damage.h  detailed.txt  endofturn.cpp  endofturn.h  evaluate.cpp  evaluate.h  evaluate.txt  expectiminimax.cpp  expectiminimax.h  foe.sbt  gcc_optimizations.py  gcc_warnings.py  (+59 more)
source/tm/: CMakeLists.txt  ability.cpp  ability.hpp  ability_blocks_move.cpp  ability_blocks_move.hpp  ability_blocks_switching.cpp  ability_blocks_weather.cpp  activate_ability_on_switch.cpp  ai.cpp  all_selections_valid.cpp  any_team.cpp  any_team.hpp  apply_entry_hazards.cpp  apply_entry_hazards.hpp  associated_team.cpp  battle.cpp  battle.hpp  binary_file_reader.cpp  bit_view.cpp  bit_view.hpp  block.cpp  block.hpp  blocks_selection_and_execution.cpp  boost_beast_http.cpp  boost_networking.cpp  buffer_view.cpp  buffer_view.hpp  bytes_in_file.cpp  bytes_in_file.hpp  can_execute_move.cpp  compress.cpp  compress.hpp  constant_generation.cpp  constant_generation.hpp  contact_ability_effect.cpp  contact_ability_effect.hpp  critical_hit.cpp  critical_hit.hpp  critical_hit_probability.cpp  damage.cpp  (+109 more)
source/tm/action_prediction/: predict_max_damage_selection.cpp  predict_random_selection.cpp  predict_statistical_selection.cpp  predicted.cpp
source/tm/ai/: CMakeLists.txt  main.cpp  parse_args.cpp  print_sizes.cpp
source/tm/bide/: bide.cpp  bide.hpp  damage.cpp  damage.hpp  duration.cpp  duration.hpp
source/tm/boost/: CMakeLists.txt  networking.cpp  property_tree.cpp
source/tm/clients/: CMakeLists.txt  action_required.cpp  battle.cpp  battle.hpp  battle_already_finished.cpp  battle_continues.cpp  battle_finished.cpp  battle_manager.cpp  battle_manager.hpp  battle_response_error.cpp  battle_result.cpp  battle_result.hpp  battle_started.cpp  check_weathers_match.cpp  client_battle.cpp  client_battle_inputs.cpp  determine_action.cpp  determine_selection.cpp  get_team.cpp  get_team_impl.cpp  handle_battle_end.cpp  handle_battle_end.hpp  invalid_team_file_format.cpp  invalid_team_file_format.hpp  load_team_from_file.cpp  log_foe_team.cpp  log_foe_team.hpp  make_battle_manager.cpp  make_battle_manager_impl.cpp  make_battle_manager_inputs.cpp  make_client_battle.cpp  make_client_battle_impl.cpp  move_result.cpp  move_result.hpp  no_pending_challenges.cpp  party.cpp  party.hpp  random_string.cpp  random_string.hpp  result.cpp  (+9 more)
source/tm/evaluate/: CMakeLists.txt  action_probability.cpp  all_evaluate.cpp  analysis_logger.cpp  analysis_logger.hpp  best_move.cpp  best_move.hpp  compressed_battle.cpp  compressed_battle.hpp  depth.cpp  depth.hpp  evaluate.cpp  evaluate.hpp  evaluate_settings.cpp  evaluator.cpp  expectiminimax.cpp  expectiminimax.hpp  extreme_element_value.cpp  load_evaluate.cpp  move_probability.cpp  move_scores.cpp  move_scores.hpp  possible_executed_moves.cpp  possible_executed_moves.hpp  predict_action.cpp  predict_action_impl.cpp  predict_max_damage_selection.cpp  predict_random_selection.cpp  predict_selection.cpp  predict_selection_impl.cpp  predicted.cpp  random_selection.cpp  random_selection.hpp  reorder.cpp  reorder.hpp  score.cpp  score_actions.cpp  score_actions_impl.cpp  score_moves.cpp  score_moves_impl.cpp  (+12 more)
source/tm/file_converter/: CMakeLists.txt  main.cpp
source/tm/move/: accuracy.cpp  accuracy.hpp  action.cpp  activate_when_hit_item.cpp  actual_damage.cpp  actual_damage.hpp  affects_target.cpp  base_power.cpp  base_power.hpp  calculate_damage.cpp  calculate_damage.hpp  call_move.cpp  call_move.hpp  call_move_impl.cpp  category.cpp  category.hpp  causes_recoil.cpp  container.cpp  container.hpp  damage_type.cpp  damage_type.hpp  do_switch.cpp  end_of_attack.cpp  executed_move.cpp  executed_move.hpp  find_required_move_index.cpp  future_action.cpp  future_selection.cpp  healing_move_fails_in_generation_1.cpp  hit_self.cpp  initial_move.cpp  irrelevant_action.cpp  is_blocked_by_gravity.cpp  is_delayed_switch.cpp  is_healing.cpp  is_self_ko.cpp  is_switch.cpp  is_switch.hpp  known_move.cpp  known_move.hpp  (+43 more)
source/tm/pokemon/: active_pokemon.cpp  active_pokemon.hpp  active_pokemon_flags.cpp  active_pokemon_flags.hpp  active_pokemon_forward.cpp  active_pokemon_forward.hpp  active_status.cpp  active_status.hpp  all_moves.cpp  any_pokemon.cpp  any_pokemon.hpp  applied_damage.cpp  can_be_koed.cpp  change_hp.cpp  collection.cpp  collection.hpp  confusion.cpp  confusion.hpp  container.cpp  container.hpp  damage_blocker.cpp  damage_blocker.hpp  delayed_attack.cpp  delayed_attack.hpp  disable.cpp  disable.hpp  embargo.cpp  embargo.hpp  encore.cpp  encore.hpp  end_of_turn_counter.cpp  end_of_turn_counter.hpp  faint.cpp  find_required_pokemon_index.cpp  get_hidden_power_type.cpp  grounded.cpp  happiness.cpp  happiness.hpp  has_hidden_power.cpp  has_physical_or_special_move.cpp  (+61 more)
source/tm/ps_usage_stats/: CMakeLists.txt  add_to_workers.cpp  battle_log_to_messages.cpp  battle_result.cpp  battle_result.hpp  battle_result_reader.cpp  battle_result_reader.hpp  battle_result_writer.cpp  battle_result_writer.hpp  create_derivative_stats.cpp  create_selection_weights.cpp  create_teams_file.cpp  files_in_directory.cpp  for_each_log.cpp  glicko1.cpp  glicko1.hpp  header.cpp  header.hpp  main.cpp  mode.cpp  parallel_for_each.cpp  parse_input_log.cpp  parse_log.cpp  parse_log.hpp  rated_side.cpp  rating.cpp  rating.hpp  serialize.cpp  serialize.hpp  thread_count.cpp  to_index.cpp  usage_stats.cpp  usage_stats.hpp  worker.cpp  worker.hpp
source/tm/stat/: allowed_hp.cpp  base_stats.cpp  base_stats.hpp  calculate.cpp  calculate.hpp  calculate_ivs_and_evs.cpp  calculate_ivs_and_evs.hpp  calculate_speed.cpp  chance_to_hit.cpp  chance_to_hit.hpp  combined_stats.cpp  combined_stats.hpp  current_hp.cpp  default_evs.cpp  dv.cpp  dv.hpp  ev.cpp  (+35 more)
(+1404 files in other folders)
